--- a/vignettes/b3_UBCF.Rmd
+++ b/vignettes/b3_UBCF.Rmd
@@ -1,6 +1,6 @@
 <!--
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{2.3 User-based k-nearest neighbors}
+%\VignetteIndexEntry{User-based k-nearest neighbors}
 -->
 
 
@@ -12,7 +12,7 @@ The choice of the $k$ nearest neighbors for the neighborhood formation results i
 a very small $k$ leads to few candidate items that can be recommended because there are not a lot of neighbors to support the predictions. In contrast, a very large $k$ impacts precision as the particularities of user's preferences can be blunted due to the large neighborhood size. In most related works $k$ has been set to be in the range of values from 10 to 100, where the optimum $k$ also depends on data characteristics such as sparsity. 
 
 
-The similarity is measured based on three algorithms: cosine(simFunct ='cos'), adjusted cosine(simFunct = 'AdjCos') and Pearson Correlation(simFunct = 'Pearson').
+The similarity is measured based on three algorithms: cosine(simFunct ='cos') and Pearson Correlation(simFunct = 'Pearson').
 
 For the Rating Prediction task, to train a model with this algorithm, it is required to define an additional argument, _neigh_ the neighborhood size.
 ```{r, eval=FALSE}
