--- a/vignettes/c2_predictrecommend.Rmd
+++ b/vignettes/c2_predictrecommend.Rmd
@@ -1,6 +1,6 @@
 <!--
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{3.1 Predicting & recommending}
+%\VignetteIndexEntry{Predicting & recommending}
 -->
 
 ## Predicting & recommending
