--- a/vignettes/c1_dispacherregistry.Rmd
+++ b/vignettes/c1_dispacherregistry.Rmd
@@ -1,6 +1,6 @@
 <!--
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{4 Dispacher and registry}
+%\VignetteIndexEntry{Dispacher and registry}
 -->
 
 ```{r global_options, include=FALSE}
